--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Animated Navigation</title>
+  <title>SAnimated Navigation</title>
   <link rel="icon" type="image/png" href="https://www.google.com/s2/favicons?domain=css-tricks.com">
   <link rel="stylesheet" href="style.css">
 </head>
