update background and link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Animated Navigation</title>
-  <link rel="icon" type="image/png" href="https://www.google.com/s2/favicons?domain=css-tricks.com">
+  <link rel="icon" type="image/x-icon" href="https://spillingweb.com/favicon.ico">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -28,7 +28,7 @@
     <div class="bar3"></div>
   </div>
   <!-- Sections -->
-  <section id="home"><a href="https://github.com/spillingweb" target="_blank">Spilling Web</a></section>
+  <section id="home"><a href="https://spillingweb.com" target="_blank">Spilling Web</a></section>
   <section id="about"><h1>Learn More About Me</h1></section>
   <section id="skills"><h1>These Are My Strengths</h1></section>
   <section id="projects"><h1>These Are My Results</h1></section>
